tests/baselines/reference/requiredMappedTypeModifierTrumpsVariance.errors.txt
requiredMappedTypeModifierTrumpsVariance.ts(5,1): error TS2741: Property 'a' is missing in type 'Required<{ b?: 1; x: 1; }>' but required in type 'Required<{ a?: 1; x: 1; }>'.
requiredMappedTypeModifierTrumpsVariance.ts(6,1): error TS2741: Property 'b' is missing in type 'Required<{ a?: 1; x: 1; }>' but required in type 'Required<{ b?: 1; x: 1; }>'.
requiredMappedTypeModifierTrumpsVariance.ts(8,3): error TS2339: Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
requiredMappedTypeModifierTrumpsVariance.ts(9,3): error TS2339: Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.
requiredMappedTypeModifierTrumpsVariance.ts(21,6): error TS2339: Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
requiredMappedTypeModifierTrumpsVariance.ts(22,6): error TS2339: Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.


==== requiredMappedTypeModifierTrumpsVariance.ts (6 errors) ====
    const a: Required<{ a?: 1; x: 1 }> = { a: 1, x: 1 };
    const b: Required<{ b?: 1; x: 1 }> = { b: 1, x: 1 };
    export let A = a;
    export let B = b;
    A = b; // Should Error
    ~
!!! error TS2741: Property 'a' is missing in type 'Required<{ b?: 1; x: 1; }>' but required in type 'Required<{ a?: 1; x: 1; }>'.
!!! related TS2728 requiredMappedTypeModifierTrumpsVariance.ts:1:21: 'a' is declared here.
    B = a; // Should Error
    ~
!!! error TS2741: Property 'b' is missing in type 'Required<{ a?: 1; x: 1; }>' but required in type 'Required<{ b?: 1; x: 1; }>'.
!!! related TS2728 requiredMappedTypeModifierTrumpsVariance.ts:2:21: 'b' is declared here.
    
    a.b; // Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
      ~
!!! error TS2339: Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
    b.a; // Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.
      ~
!!! error TS2339: Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.
    
    interface Foo<T> {
        a: Required<T>;
    }
    const aa: Foo<{ a?: 1; x: 1 }> = { a: { a: 1, x: 1 } };
    const bb: Foo<{ b?: 1; x: 1 }> = { a: { b: 1, x: 1 } };
    export let AA = aa;
    export let BB = bb;
    AA = bb; // Should Error
    BB = aa; // Should Error
    
    aa.a.b; // Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
         ~
!!! error TS2339: Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
    bb.a.a; // Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.
         ~
!!! error TS2339: Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.